@@ -26,13 +26,18 @@ Changes from 2.8.2 to 2.8.3
 
 - PLANNED: Keep track of any further API clean-up?
 
-
 Changes from 2.8.1 to 2.8.2
 ---------------------------
 
 - Added generation of FreeBSD/pfSense quirks for USB devices supported
   by NUT (may get installed to `$datadir` e.g. `/usr/local/share/nut`
   and need to be pasted into your `/boot/loader.conf.local`). [#2159]
+
+- Added generation of "driver" actions list for USB devices supported
+  by NUT to help IPS (aka `pkg(5)`) packaging for Solaris/illumos: the
+  resulting `scripts/Solaris/nut-usb-driver.p5m.include` file can be
+  used by IPS packaging recipes to enhance the package which delivers
+  USB-capable NUT drivers.
 
 Changes from 2.8.0 to 2.8.1
 ---------------------------
