@@ -36,6 +36,11 @@ endif
 
 EXTRA_DIST += reset-ups-usb-solaris.sh.sample
 
+# We do not install this file, but it is a helper for IPS packaging
+# (ours or distro's) to deliver a useful nut-drivers-usb package,
+# and is part of dist tarball regardless of use for current build:
+EXTRA_DIST += nut-usb-driver.p5m.include.in
+
 SOLARIS_PACKAGE_TARGETS =
 
 if WITH_SOLARIS_PKG_IPS
@@ -90,3 +95,12 @@ check-local-solaris-smf: $(SOLARIS_SMF_MANIFESTS)
 	 done; exit $$RES
 
 MAINTAINERCLEANFILES = Makefile.in .dirstamp
+
+# Generated by autogen.sh and needed to run the configure script
+# (technically, generated by tools/nut-usbinfo.pl script among
+# GENERATED_USB_OS_FILES):
+MAINTAINERCLEANFILES += nut-usb-driver.p5m.include.in
+MAINTAINERCLEANFILES += nut-usb-driver.p5m.include.in.AUTOGEN_WITHOUT
+
+# Generated by configure script:
+DISTCLEANFILES = nut-usb-driver.p5m.include
