@@ -56,6 +56,9 @@ my $output_devd="$TOP_BUILDDIR/scripts/devd/nut-usb.conf.in";
 # FreeBSD/pfSense/... quirks output file
 my $output_freebsd_quirks="$TOP_BUILDDIR/scripts/devd/nut-usb.quirks";
 
+# Solaris/illumos IPS aka pkg(5) "driver" actions
+my $output_pkg5ips_driver_actions="$TOP_BUILDDIR/scripts/Solaris/nut-usb-driver.p5m.include.in";
+
 # UPower output file
 my $outputUPower="$TOP_BUILDDIR/scripts/upower/95-upower-hid.hwdb";
 
@@ -128,6 +131,13 @@ sub gen_usb_files
 	print $out_freebsd_quirks "# Contents should be added to /boot/loader.conf.local (watch out for unique quirk numbers!)\n";
 	print $out_freebsd_quirks "# Inspired by 'Notes on USB quirks' under https://forum.netgate.com/topic/183961/nut-package-2-8-1-and-above\n";
 	print $out_freebsd_quirks "# and https://github.com/freebsd/freebsd-src/blob/main/sys/dev/usb/quirk/usb_quirk.c\n\n";
+
+	my $out_pkg5ips_driver_actions = do {local *OUT_PKG5IPS_DRIVER_ACTIONS};
+	open $out_pkg5ips_driver_actions, ">$output_pkg5ips_driver_actions" || die "error $output_pkg5ips_driver_actions : $!";
+	print $out_pkg5ips_driver_actions "# This file is generated by the Network UPS Tools package and intends to aid in IPS packaging\n";
+	print $out_pkg5ips_driver_actions "# and lists NUT USB VendorID:ProductID pairs supported by some USB-capable driver\n";
+	print $out_pkg5ips_driver_actions "# Homepage: https://www.networkupstools.org/\n\n";
+	print $out_pkg5ips_driver_actions "driver name=ugen \\\n";
 
 	# UPower file header
 	my $outUPower = do {local *OUT_UPOWER};
@@ -232,6 +242,9 @@ sub gen_usb_files
 			print $out_freebsd_quirks "# ".$vendor{$vendorId}{$productId}{"comment"}.' - '.$vendor{$vendorId}{$productId}{"drivers"}."\n";
 			print $out_freebsd_quirks "hw.usb.quirk." . $entryNumber . "=\"" . $vendorId . " " . $productId . " 0x0000 0xffff UQ_HID_IGNORE\"\n";
 
+			# Solaris/illumos IPS aka pkg(5) "driver" actions entry
+			print $out_pkg5ips_driver_actions "\talias=\"usb" . removeHexPrefix($vendorId) . "," . removeHexPrefix($productId) . ".*\" \\\n";
+
 			# UPower device entry (only for USB/HID devices!)
 			if ($vendor{$vendorId}{$productId}{"driver"} eq "usbhid-ups" ||
 				$vendor{$vendorId}{$productId}{"driver"} eq "apc_modbus")
@@ -270,11 +283,15 @@ sub gen_usb_files
 		}
 
 	}
+
 	# Udev footer
 	print $outUdev "\n".'LABEL="nut-usbups_rules_end"'."\n";
 
 	# Device scanner footer
 	print $outDevScanner "\n\t/* Terminating entry */\n\t{ 0, 0, NULL, NULL }\n};\n#endif /* DEVSCAN_USB_H */\n\n";
+
+	# Solaris/illumos IPS aka pkg(5) "driver" actions footer
+	print $out_pkg5ips_driver_actions "\tperms=\"* 0664 root \@RUN_AS_GROUP\@\"\n";
 }
 
 sub find_usbdevs
