@@ -67,6 +67,11 @@ https://github.com/networkupstools/nut/milestone/10
    * Added generation of FreeBSD/pfSense quirks for USB devices supported
      by NUT (may get installed to `$datadir` e.g. `/usr/local/share/nut`
      and need to be pasted into your `/boot/loader.conf.local`). [#2159]
+   * Added generation of "driver" actions list for USB devices supported
+     by NUT to help IPS (aka `pkg(5)`) packaging for Solaris/illumos: the
+     resulting `scripts/Solaris/nut-usb-driver.p5m.include` file can be
+     used by IPS packaging recipes to enhance the package which delivers
+     USB-capable NUT drivers.
 
  - upsd: Fixed conditions for "no listening interface available" diagnosis
    to check how many listeners we succeeded with, not whether the first one
